--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,24 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
+                <action android:name="shantanu.summertraining.MainActivity"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".SquareApp"
+            android:label="SquareApp">
+        </activity>
+        <activity android:name=".HomeActivity"
+            android:label="HomeActivity">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".SquareApp">
+        <activity android:name=".AdvanceCalc"
+            android:label="AdvanceCalc">
         </activity>
     </application>
 
