AdvanceCalculate: INTENT implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,12 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
-        <activity android:name=".SquareApp"
+        <activity
+            android:name=".SquareApp"
             android:label="SquareApp">
         </activity>
-        <activity android:name=".HomeActivity"
+        <activity
+            android:name=".HomeActivity"
             android:label="Summer Training">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -27,8 +29,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".AdvanceCalc"
+        <activity
+            android:name=".AdvanceCalc"
             android:label="AdvanceCalc">
+        </activity>
+        <activity android:name=".ResultActivity">
         </activity>
     </application>
 
