--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
         </activity>
         <activity android:name=".ImplicitIntent">
         </activity>
+        <activity android:name=".EmailSend"
+            android:label="Email">
+        </activity>
     </application>
 
 </manifest>
