DYNAMIC FRAGMENT implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,8 @@
         </activity>
         <activity android:name=".ActivityContainingFragment">
         </activity>
+        <activity android:name=".DynamicActivity">
+        </activity>
     </application>
 
 </manifest>
